--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,15 @@
 	font-family: "Lato", sans-serif;
 }
 
-.dentistry,
+.contents,
 .infotech {
 	display: flex;
-	height: 90vh;
+	/* height: 90vh; */
 	align-items: center;
 	justify-content: center;
-	font-size: 3rem;
+	/* margin: auto; */
+	height: fit-content;
+	margin-top: 15px;
+	white-space: pre-line;
+	text-align: center;
 }
