--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -4,7 +4,7 @@
 	justify-content: center;
 	align-items: center;
 	line-height: 2.5rem;
-	white-space: pre-line;
+	// white-space: pre-line;
 	margin: 7px 100px;
 	text-align: center;
 }
@@ -30,7 +30,7 @@ img {
 	// }
 
 	.content {
-		line-height: 2.5rem;
+		line-height: 1.5rem;
 		display: inline-block;
 		margin: 10px 0px;
 		text-align: left;
