--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,15 @@
 	font-family: "Lato", sans-serif;
 }
 
-.contents {
+.contents,
+.courses {
 	display: flex;
 	/* height: 90vh; */
 	align-items: center;
 	justify-content: center;
 	/* margin: auto; */
 	height: fit-content;
-	margin-top: 15px;
+	margin-top: 25px;
 	/* white-space: pre-line; */
 	text-align: center;
 }
